# kaggle-with-claudecode

./: .envrc.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
configs/: baseline.yaml  lgb_fe_v1.yaml  lgb_hp_v1.yaml  lgb_hp_v1_best.yaml  xgb_fe_v1.yaml  xgb_fe_v2.yaml  xgb_hp_v1.yaml  xgb_hp_v1_best.yaml
docs/: experiment-plan.md
docs/superpowers/plans/: 2026-06-27-kaggle-pipeline.md
docs/superpowers/specs/: 2026-06-27-kaggle-pipeline-design.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
scripts/: download_data.py
src/: data.py  features.py  models.py  predict.py  train.py  tune.py
tests/: test_data.py  test_models.py  test_predict.py
