[project]
name = "kaggle-with-claudecode"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "wandb>=0.28.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
]
